manifests/apps/inventory/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inventory
  annotations:
    argocd.argoproj.io/sync-wave: "1"
