manifests/apps/inventory/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  namespace: inventory
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
      - name: inventory
        image: ghcr.io/marcoplaisier/inventory:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /components/
            port: 8000
            httpHeaders:
            - name: Host
              value: localhost
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /components/
            port: 8000
            httpHeaders:
            - name: Host
              value: localhost
          initialDelaySeconds: 10
          periodSeconds: 5
