manifests/apps/inventory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: inventory
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  selector:
    app: inventory
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
